# Mark

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: default.yaml  sfx_library.yaml
config/caption_styles/: clean.yaml  hormozi.yaml  meme.yaml
config/characters/: mia-ambassador.yaml  poli.yaml  talentbot.yaml  whiskers-cat.yaml
config/products/: example.yaml
docs/: MARK-EXPLAINED.md  VISION.md
docs/design/: CONTENT-TEMPLATES-BUILD.md
docs/research/: MASTER-STRATEGY.md  ai-content-tools.md  ai-slop-genre.md  gen-z-psychology.md  humor-mechanics.md  platform-instagram.md  platform-linkedin.md  platform-smaller.md  platform-tiktok.md  platform-x.md  strategy-frameworks.md  trend-adaptation.md  virtual-ambassador.md
scripts/: demo_seed.py  e2e_smoke.py  evolution_proof.py  screenshot.py  tour_check.py
src/mark/: __init__.py  app.py  autonomy.py  characters.py  cli.py  config.py  constants.py  db.py  experiments.py  humor.py  humor_radar.py  llm.py  monitor.py  onboard.py  pipeline.py  prompts.py  rating.py  replies.py  schemas.py  scientist.py  series.py  simulate.py  store.py  strategies.py  taste.py  vectors.py
src/mark/agents/: __init__.py  analyzer.py  media.py  strategist.py  writer.py
src/mark/analytics/: __init__.py  collector.py  sentiment.py
src/mark/assets/fonts/: OFL-LICENSE.txt
src/mark/learning/: __init__.py  bandit.py  calibration.py  feedback.py  knowledge.py  winners.py
src/mark/media/: __init__.py  align.py  ass_captions.py  captions.py  chatdrama.py  edl.py  identity.py  images.py  render.py  sfx.py  tts.py  uikit.py  video.py
src/mark/posting/: __init__.py  manager.py  upload_post.py
src/mark/scheduler/: __init__.py  engine.py
src/mark/sourcing/: __init__.py  sfx_bank.py  stock.py  twitch.py  ytdlp.py
src/mark/templates/: __init__.py  ambassador.py  animal_story.py  campaigns.py  livestream.py  motivational.py  recap.py
src/mark/trends/: __init__.py  aggregator.py  bluesky.py  google_trends.py  imgflip.py  reddit.py  tiktok.py
src/mark/web/: __init__.py  api.py  runtime.py  server.py
src/mark/web/static/: index.html
src/mark/web/static/assets/: index-2_7eQAUk.js  index-BMMo7B8r.js  index-BnG4g748.css  index-BuOpUfMG.css  index-Bw4JTMxW.js  index-C-ndPZCr.js  (+8 more)
tests/: conftest.py  test_ambassador.py  test_animal_story.py  test_api.py  test_autonomy.py  test_campaigns.py  test_captions_engine.py  test_editor_api.py  test_edl_render.py  test_evolution.py  test_foundation.py  test_humor_radar.py  test_learning.py  test_livestream.py  test_media.py  test_motivational.py  test_onboard.py  test_pipeline.py  test_recap.py  test_series.py  test_sfx.py  test_sourcing.py  test_strategies.py  test_taste.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/src/: App.tsx  api.ts  main.tsx  store.tsx  styles.css  types.ts
web/src/components/: ui.tsx
web/src/pages/: Analytics.tsx  Autopilot.tsx  Campaigns.tsx  Dashboard.tsx  Editor.tsx  Learn.tsx  Playbook.tsx  Review.tsx  Settings.tsx  Studio.tsx  Taste.tsx  Trends.tsx
web/src/tour/: Tour.tsx  steps.ts
